src/test/deca/context/valid/objet/instanceof_cont_02.deca
// Description:
//   Instanceof null
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {

}

{
    A a;
    a instanceof A;
}
