src/test/deca/context/invalid/objet/selection_not_class_instance.deca
// Description:
//     Selection avec un identifier qui n'est pas une instane de class.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A{

}

{
    int x;
    x.getX;
}


